FEAT: Implementation of nutritionist-patient linkage and editing of profiles for both roles, with corresponding tests