@@ -8,64 +8,69 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 @Component
 public class MongoClinicalRepositoryAdapter implements ClinicalRepositoryPort {
 
-    private final SpringDataMongoPatientProfileRepository repository;
+    private final SpringDataMongoPatientProfileRepository patientRepository;
 
-    public MongoClinicalRepositoryAdapter(SpringDataMongoPatientProfileRepository repository) {
-        this.repository = repository;
+    public MongoClinicalRepositoryAdapter(SpringDataMongoPatientProfileRepository patientRepository) {
+        this.patientRepository = patientRepository;
     }
 
     @Override
     public PatientProfile save(PatientProfile profile) {
-        PatientProfileDocument document = new PatientProfileDocument(
-            profile.getUserId(),
-            profile.getWeightKg(),
-            profile.getHeightCm(),
-            profile.getBirthDate(),
-            profile.getGender().name(), 
-            profile.getActivityLevel().name(),
-            profile.getWeightHistory() 
-        );
-        
+        PatientProfileDocument document = new PatientProfileDocument();
+        document.setUserId(profile.getUserId());
+        document.setFirstName(profile.getFirstName());
+        document.setPaternalLastName(profile.getPaternalLastName());
+        document.setMaternalLastName(profile.getMaternalLastName());
+        document.setWeightKg(profile.getWeightKg());
+        document.setHeightCm(profile.getHeightCm());
+        document.setBirthDate(profile.getBirthDate());
+        document.setGender(profile.getGender() != null ? profile.getGender().name() : null);
+        document.setActivityLevel(profile.getActivityLevel() != null ? profile.getActivityLevel().name() : null);
+        document.setGoal(profile.getGoal());
+        document.setDietType(profile.getDietType());
+        document.setAllergies(profile.getAllergies());
+        document.setExcludedFoods(profile.getExcludedFoods());
+        document.setWeightHistory(profile.getWeightHistory());
         document.setNutritionistId(profile.getNutritionistId());
 
-        repository.save(document);
+        patientRepository.save(document);
         return profile;
     }
 
     @Override
     public Optional<PatientProfile> findByUserId(String userId) {
-        return repository.findById(userId)
-            .map(this::mapDocumentToDomain);
+        return patientRepository.findById(userId).map(this::mapPatientDocumentToDomain);
     }
 
     @Override
     public List<PatientProfile> findAllByNutritionistId(String nutritionistId) {
-        return repository.findAllByNutritionistId(nutritionistId).stream()
-                .map(this::mapDocumentToDomain)
-                .collect(Collectors.toList());
+        return patientRepository.findAllByNutritionistId(nutritionistId)
+                .stream()
+                .map(this::mapPatientDocumentToDomain)
+                .toList();
     }
 
-    private PatientProfile mapDocumentToDomain(PatientProfileDocument doc) {
-        PatientProfile profile = new PatientProfile(
-            doc.getUserId(),
-            doc.getWeightKg(),
-            doc.getHeightCm(),
-            doc.getBirthDate(),
-            Gender.valueOf(doc.getGender()), 
-            ActivityLevel.valueOf(doc.getActivityLevel())
+    private PatientProfile mapPatientDocumentToDomain(PatientProfileDocument doc) {
+        return PatientProfile.rehydrate(
+                doc.getUserId(),
+                doc.getFirstName(),
+                doc.getPaternalLastName(),
+                doc.getMaternalLastName(),
+                doc.getWeightKg(),
+                doc.getHeightCm(),
+                doc.getBirthDate(),
+                doc.getGender() != null ? Gender.valueOf(doc.getGender()) : null,
+                doc.getActivityLevel() != null ? ActivityLevel.valueOf(doc.getActivityLevel()) : null,
+                doc.getGoal(),
+                doc.getDietType(),
+                doc.getAllergies(),
+                doc.getExcludedFoods(),
+                doc.getWeightHistory(),
+                doc.getNutritionistId()
         );
-        
-        if (doc.getWeightHistory() != null && !doc.getWeightHistory().isEmpty()) {
-            profile.getWeightHistory().clear();
-            profile.getWeightHistory().addAll(doc.getWeightHistory());
-        }
-        
-        profile.setNutritionistId(doc.getNutritionistId());
-        
-        return profile;
     }
 }
